--- a/style.css
+++ b/style.css
@@ -140,3 +140,69 @@ nav ul li a:hover::before {
     border-radius: 1.25rem;
     color: var(--whiteish);
 }
+
+.discount-sec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 3.75rem 0;
+
+}
+
+.discount-sec .discount {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+
+}
+
+.discount-cards {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 50%;
+    height: auto;
+    background-color: var(--black);
+    border-radius: 1.875rem;
+    padding: 1.25rem 1.25rem;
+    margin: 0 1.25rem;
+}
+
+.card-img {
+    border-color: rgb(126, 46, 135);
+    width: 9.375rem;
+    height: 9.375rem;
+    text-align: center;
+    border: 5px solid var(--orange);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-items {
+    /* background-color: olivedrab; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card-items h3 {
+    font-size: 1.6rem;
+}
+
+.card-items p {
+    font-size: 1.3rem;
+}
+
+.card-btn {
+    padding: 0.7rem 2rem;
+}
