--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ nav ul li a:hover::before {
     border-radius: 1.875rem;
     padding: 1.25rem 1.25rem;
     margin: 0 1.25rem;
+    box-shadow: 2px 2px 10px rgb(116, 103, 103);
 }
 
 .card-img {
@@ -205,4 +206,159 @@ nav ul li a:hover::before {
 
 .card-btn {
     padding: 0.7rem 2rem;
+}
+
+/* Menu CSS */
+
+.menu-sec {
+    width: 100%;
+    color: var(--black);
+    margin-bottom: 2rem;
+}
+
+.menu-container {
+    width: 90%;
+    /* background-color: red; */
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-heading {
+    padding: 2rem;
+
+}
+
+.menu-filters ul {
+    display: flex;
+}
+
+.menu-filters ul li {
+    padding: 0 2rem;
+
+}
+
+.filters-content {
+    width: 100%;
+    margin-top: 3rem;
+}
+
+.menu-content {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+    gap: 2rem;
+
+}
+
+.menu-card>img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    border-radius: 30px;
+}
+
+.menu-card {
+    width: 18rem;
+    height: 25rem;
+    background-color: var(--black);
+    color: var(--whiteish);
+    border-radius: 30px;
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.options h3 {
+    padding: 0.5rem 0;
+}
+
+.options p {
+    font-size: 0.8rem;
+    margin-top: 1rem;
+    padding-bottom: 2rem;
+}
+
+.options div {
+    padding: 0 0.3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.options div a {
+    text-align: center;
+    padding: 10px;
+    background-color: var(--orange);
+    border-radius: 50%;
+}
+
+.btn-box {
+    margin-top: 2rem;
+    background-color: var(--orange);
+    color: var(--whiteish);
+    padding: 1rem 3rem;
+    border-radius: 2rem;
+}
+
+/* ------- */
+
+
+.about-us {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--black);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-text {
+    width: 50%;
+    height: 50%;
+    text-align: left;
+    padding: 0 3rem;
+}
+
+.about-text h1 {
+    font-size: 4rem;
+    letter-spacing: 0.2rem;
+}
+
+.about-text p {
+    font-size: 1.2rem;
+    line-height: 2rem;
+    margin-bottom: 2rem;
+
+}
+
+.abt-btn {
+    border: none;
+    background-color: var(--orange);
+    color: var(--whiteish);
+    padding: 1rem 2.3rem;
+    border-radius: 1rem;
+}
+
+.hmbg-svg {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.hmbg-svg img {
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+
 }
