--- a/style.css
+++ b/style.css
@@ -173,6 +173,11 @@ nav ul li a:hover::before {
     box-shadow: 2px 2px 10px rgb(116, 103, 103);
 }
 
+.discount-cards:hover .card-img img {
+    transform: scale(1.1);
+}
+
+
 .card-img {
     border-color: rgb(126, 46, 135);
     width: 9.375rem;
@@ -181,12 +186,14 @@ nav ul li a:hover::before {
     border: 5px solid var(--orange);
     border-radius: 50%;
     overflow: hidden;
+
 }
 
 .card-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all .3s;
 }
 
 .card-items {
@@ -239,6 +246,14 @@ nav ul li a:hover::before {
 
 }
 
+.menu-filters ul li:first-child {
+    padding: 0.1rem 2rem;
+    background-color: var(--black);
+    border-radius: 20px;
+    color: var(--whiteish);
+
+}
+
 .filters-content {
     width: 100%;
     margin-top: 3rem;
@@ -259,6 +274,7 @@ nav ul li a:hover::before {
     height: 50%;
     object-fit: cover;
     border-radius: 30px;
+    transition: all .3s;
 }
 
 .menu-card {
@@ -267,7 +283,24 @@ nav ul li a:hover::before {
     background-color: var(--black);
     color: var(--whiteish);
     border-radius: 30px;
+    overflow: hidden;
+    transition: all .3s;
+}
 
+.menu-card:hover {
+    box-shadow: 0 0 10px 1px rgb(147, 147, 147);
+}
+
+.menu-card:hover div div a {
+    transform: rotate(360deg);
+}
+
+.menu-card div div a {
+    transition: all .3s;
+}
+
+.menu-card:hover img {
+    transform: scale(1.1);
 }
 
 .options {
